@@ -1579,4 +1579,12 @@ No match
 
 # ---------------------------------------------------- 
 
+/(*UTF)(?=\x{123})/I
+Capture group count = 0
+May match empty string
+Compile options: <none>
+Overall options: utf
+First code unit = \x{123}
+Subject length lower bound = 1
+
 # End of testinput12
